<resources>
    <string name="app_name">MindStone-d</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Sign up.</string>
    <string name="btn_link_to_login">Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="already_registered">Already registered?</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="save">Save</string>
    <string name="tap_on_camera_to_choose_profile_picture">Tap on camera to choose profile picture</string>
    <string name="borderline_personality_disorder">Borderline Personality Disorder</string>
    <string name="adhd">ADHD</string>
    <string name="ptsd">PTSD</string>
    <string name="depression">Depression</string>
    <string name="anxiety">Anxiety</string>
    <string name="understand_the_psychology_behind_your_mood_and_learn_about_these_mental_disorders">Understand the psychology behind your mood and learn about these mental disorders.</string>
    <string name="knowledge">Knowledge</string>
    <string name="detection">Detection</string>
    <string name="introduction">Introduction</string>
    <string name="facts">Facts</string>
    <string name="symptoms">Symptoms</string>
    <string name="types">Types</string>
    <string name="explanation">Explanation</string>
    <string name="causes">Causes</string>
    <string name="risk_factors">Risk Factors</string>
    <string name="treatment">Treatment</string>
    <string name="therapies">Therapies</string>
    <string name="medication">Medication</string>
    <string name="Open">drawer open</string>
    <string name="Close">drawer closed</string>
    <string name="failure_breaking_benjamin">Failure - Breaking Benjamin</string>
    <string name="don_t_look_down_martin_garrix">Don\'t Look Down - Martin Garrix</string>
    <string name="hall_of_fame_the_script">Hall of Fame - The Script</string>
    <string name="superheroes_the_script">Superheroes- The Script</string>
    <string name="dream_on_aerosmith">Dream On- Aerosmith</string>
    <string name="the_elephant_rope_n_n_as_a_man_was_passing_the_elephants_he_suddenly_stopped_confused_by_the_fact_that_these_huge_creatures_were_being_held_by_only_a_small_rope_tied_to_their_front_leg_no_chains_no_cages_it_was_obvious_that_the_elephants_could_at_anytime_break_away_from_their_bonds_but_for_some_reason_they_did_not_n_n_he_saw_a_trainer_nearby_and_asked_why_these_animals_just_stood_there_and_made_no_attempt_to_get_away_well_trainer_said_when_they_are_very_young_and_much_smaller_we_use_the_same_size_rope_to_tie_them_and_at_that_age_it_s_enough_to_hold_them_as_they_grow_up_they_are_conditioned_to_believe_they_cannot_break_away_they_believe_the_rope_can_still_hold_them_so_they_never_try_to_break_free_the_man_was_amazed_these_animals_could_at_any_time_break_free_from_their_bonds_but_because_they_believed_they_couldn_t_they_were_stuck_right_where_they_were_like_the_elephants_how_many_of_us_go_through_life_hanging_onto_a_belief_that_we_cannot_do_something_simply_because_we_failed_at_it_once_before_failure_is_part_of_learning_we_should_never_give_up_the_struggle_in_life_n_n">The Elephant Rope    As a man was passing the elephants, he suddenly stopped, confused by the fact that these huge creatures were being held by only a small rope tied to their front leg. No chains, no cages. It was obvious that the elephants could, at anytime, break away from their bonds but for some reason, they did not.     He saw a trainer nearby and asked why these animals just stood there and made no attempt to get away. “Well,” trainer said, “when they are very young and much smaller we use the same size rope to tie them and, at that age, it’s enough to hold them. As they grow up, they are conditioned to believe they cannot break away. They believe the rope can still hold them, so they never try to break free.” The man was amazed. These animals could at any time break free from their bonds but because they believed they couldn’t, they were stuck right where they were. Like the elephants, how many of us go through life hanging onto a belief that we cannot do something, simply because we failed at it once before? Failure is part of learning; we should never give up the struggle in life.</string>
    <string name="lance_armstrong_n_n_diagnosed_with_advanced_testicular_cancer_at_the_age_of_25_doctors_gave_lance_armstrong_less_than_a_40_percent_chance_of_recovery_tumors_were_discovered_in_his_lungs_and_stomach_along_with_multiple_lesions_on_the_brain_his_biking_career_was_over_or_so_everyone_thought_but_no_one_counted_on_the_indomitable_belief_armstrong_had_in_himself_and_the_lessons_which_his_mother_linda_walling_had_taught_him_one_of_the_first_things_that_he_did_was_to_acknowledge_the_disease_that_had_captured_him_in_its_talons_and_learn_everything_he_could_about_it_he_devoured_books_resources_and_found_help_in_support_groups_with_people_going_through_similar_difficulties_lance_sought_strength_in_three_things_his_mother_had_instilled_in_him_n_n_make_every_obstacle_an_opportunity_always_work_hard_and_good_things_will_happen_and_don_t_believe_it_when_other_people_say_you_can_t_his_first_comeback_after_beating_cancer_was_not_a_success_and_he_finished_fourteenth_in_the_race_he_even_thought_about_retirement_but_constant_support_from_his_fianc_e_mother_and_buddy_chris_carmichael_soon_had_him_training_for_his_next_race_in_the_appalachians_he_returned_from_his_training_a_transformed_man_and_never_let_the_constant_difficulties_plough_him_down_again_true_the_doping_scandals_have_destroyed_lance_s_reputation_as_a_professional_biker_but_one_cannot_but_admire_his_sheer_will_power_and_dedication_through_which_he_turned_the_odds_in_his_favor_at_a_time_when_everyone_thought_his_life_was_over">Lance Armstrong     Diagnosed with advanced testicular cancer at the age of 25, doctors gave Lance Armstrong less than a 40 percent chance of recovery. Tumors were discovered in his lungs and stomach along with multiple lesions on the brain. His biking career was over or so everyone thought; but no one counted on the indomitable belief Armstrong had in himself and the lessons which his mother, Linda Walling had taught him. One of the first things that he did was to acknowledge the disease that had captured him in its talons and learn everything he could about it. He devoured books, resources and found help in support groups with people going through similar difficulties. Lance sought strength in three things his mother had instilled in him     “Make every obstacle an opportunity”, “Always work hard and good things will happen” and “Don’t believe it when other people say you can’t”. His first comeback after beating cancer was not a success and he finished fourteenth in the race. He even thought about retirement but constant support from his fiancée, mother and buddy Chris Carmichael soon had him training for his next race in the Appalachians. He returned from his training a transformed man and never let the constant difficulties plough him down again. True, the doping scandals have destroyed Lance’s reputation as a professional biker. But one cannot but admire his sheer will power and dedication through which he turned the odds in his favor at a time when everyone thought his life was over.</string>
    <string name="change_profile">Change Profile</string>
    <string name="desc">Most people have some stress reactions after trauma.   Health professionals refer to it as Post Traumatic Stress or PTSD.To discover wheter youre experiencing similar symptoms, answer questions based on a clinically validated test developed at the US department of veterans Affairs.</string>
    <string name="start">Start</string>
    <string name="post_traumatic_stress_disorder">POST TRAUMATIC STRESS DISORDER</string>
    <string name="d">Depression is a mood disorder that causes a persistent feeling of sadness and loss of interest. Also called major depressive disorder or clinical depression, it affects how you feel, think and behave and can lead to a variety of emotional and physical problems. To discover your level of depression, answer questions based on a clinically validated test developed at the Duke University.</string>
    <string name="when_you_experience_emotional_instability_mood_swings_and_impulsive_behaviors_in_a_way_that_is_preventing_you_from_thoroughly_enjoying_your_relationships_and_yourself_it_can_impact_your_happiness_health_professionals_refer_to_it_as_borderline_personality_to_discover_whether_you_are_experiencing_the_same_answer_questions_based_on_a_clinically_validated_test_developed_at_the_university_of_iowa">When you experience emotional instability,mood swings and impulsive behaviors in a way that is preventing you from thoroughly enjoying your relationships and yourself,it can impact your happiness. Health professionals refer to it as Borderline Personality. To discover whether you are experiencing the same, answer questions based on a clinically validated test developed at the University of Iowa.</string>
    <string name="borderline_personality">BORDERLINE PERSONALITY</string>
    <string name="everyone_experiences_stress_and_anxiety_when_these_feelings_become_a_part_of_your_everyday_life_health_professionals_refer_to_it_as_generalised_anxiety_to_discover_your_level_of_anxiety_answer_questions_based_on_a_clinically_validated_test_developed_at_the_columbia_university">Everyone experiences stress and anxiety. When these feelings become a part of your everyday life. Health professionals refer to it as generalised anxiety. To discover your level of anxiety,answer questions based on a clinically validated test developed at the Columbia University.</string>
    <string name="in_the_past_month_how_much_have_you_been_bothered_by_repeated_disturbing_and_unwanted_memories_of_the_stressful_experience">In the past month how much have you been bothered by repeated disturbing and unwanted memories of the stressful experience?</string>
    <string name="moderately">Moderately</string>
    <string name="quite_a_bit">Quite a bit</string>
    <string name="a_little_bit">A little bit</string>
    <string name="extremely">Extremely</string>
    <string name="not_at_all">Not at all</string>
</resources>