<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="Score:" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:max="700"
        android:progress="100"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:padding="10dp"
        android:text="@string/in_the_past_month_how_much_have_you_been_bothered_by_repeated_disturbing_and_unwanted_memories_of_the_stressful_experience"
        android:textAlignment="center"
        android:textColor="#58857e"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.6"

        android:background="@drawable/shape2"
        android:text="@string/not_at_all" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.6"
        android:background="@drawable/shape2"
        android:text="@string/a_little_bit" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.6"
        android:background="@drawable/shape2"
        android:text="@string/moderately" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.6"
        android:background="@drawable/shape2"
        android:text="@string/quite_a_bit" />

    <Button
        android:id="@+id/choice5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.6"
        android:background="@drawable/shape2"
        android:text="@string/extremely" />
</LinearLayout>