<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lol"
        tools:alpha="0.25" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/everyone_experiences_stress_and_anxiety_when_these_feelings_become_a_part_of_your_everyday_life_health_professionals_refer_to_it_as_generalised_anxiety_to_discover_your_level_of_anxiety_answer_questions_based_on_a_clinically_validated_test_developed_at_the_columbia_university"
        android:textAlignment="center"
        android:textColor="#151414"

        android:textSize="18sp"
        android:textStyle="italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:orientation="horizontal" />
    <Button
        android:id="@+id/button"
        android:layout_width="185dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:background="@drawable/shape"



        android:text="@string/start"

        android:textColor="#151414"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"

        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:alpha="0.5"
        android:background="@drawable/shape"
        android:text="@string/anxiety"


        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>