<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/smdl"
    android:background="@drawable/bgg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:text="@string/knowledge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/understand_the_psychology_behind_your_mood_and_learn_about_these_mental_disorders" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:id="@+id/l1"
                android:layout_margin="20dp">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:background="@android:color/transparent"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_anxiety" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="@string/anxiety" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/l1"
                android:orientation="vertical"
                android:id="@+id/l2"
                android:layout_margin="20dp"
                android:layout_toEndOf="@+id/l1">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_depression" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv3"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/depression"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l1"
                android:orientation="vertical"
                android:id="@+id/l3"
                android:layout_margin="20dp">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_ptsd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv4"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="@string/ptsd"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l2"
                android:orientation="vertical"
                android:id="@+id/l4"
                android:layout_toRightOf="@+id/l3"
                android:layout_margin="20dp"
                android:layout_toEndOf="@+id/l3">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_adhd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="@string/adhd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l3"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:id="@+id/l5">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_bi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv6"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="@string/borderline_personality_disorder"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/activity_navigation_drawer"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>

   </android.support.v4.widget.DrawerLayout>